--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         <activity android:name=".controller.DetailsActivity"></activity>
         <activity android:name=".controller.MapActivity"></activity>
         <activity android:name=".controller.SettingsActivity"></activity>
+        <activity android:name=".controller.GameOverActivity"></activity>
     </application>
 
 </manifest>
